--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -1268,8 +1268,8 @@ footer .footer-top .footer-social-link {
 }
 footer .footer-top .footer-social-link .globle-search {
   position: absolute;
-  top: 6px;
-  right: 110px;
+  top: 3px;
+  right: 45px;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
   -ms-transition: all 0.5s ease-in-out;
@@ -1281,6 +1281,9 @@ footer .footer-top .footer-social-link .globle-search {
 }
 footer .footer-top .footer-social-link .globle-search .search-text {
   width: 100%;
+}
+footer .footer-top .footer-social-link .globle-search.active {
+  width: 225px;
 }
 footer .footer-top .footer-social-link .fa {
   font-size: 24px;
@@ -8239,7 +8242,7 @@ section.sidebar .block-itg-ads {
   vertical-align: top;
   position: relative;
   background: #d1d1d1;
-  width: 190px;
+  width: 195px;
   height: 54px;
   line-height: 54px;
   padding-right: 10px;
