--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -751,7 +751,7 @@
         }
       }
       .globle-search{
-        @include pos(absolute,0px,94px,null,null);
+        @include pos(absolute,-2px,25px,null,null);
         @include transition(all 0.5s ease-in-out );
         width:0px;
         overflow:hidden;
@@ -759,7 +759,11 @@
         .search-text{
           height:25px;
           line-height:25px;
-        }                    
+          width: 100%;
+        }
+        &.active{
+          width:140px;
+        }
       }
     }
   }
