--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -1093,24 +1093,27 @@ footer{
             margin-right: 50px;
         }
         .footer-social-link{
-            @include font(24px,null,null);
+          @include font(24px,null,null);
+          vertical-align: middle;
+          @include float(right);
+          padding-right: 50px;
+          .globle-search{
+            @include pos(absolute,3px,45px,null,null);
+            @include transition(all 0.5s ease-in-out );
+            width:0px;
+            overflow:hidden;
+            height:30px;
+            .search-text{
+              @include calculate-width(1);
+            } 
+            &.active{
+              width: 225px;
+            }
+          }
+          .fa{
+            @include font(24px);
             vertical-align: middle;
-            @include float(right);
-            padding-right: 50px;
-            .globle-search{
-                    @include pos(absolute,6px,110px,null,null);
-                    @include transition(all 0.5s ease-in-out );
-                    width:0px;
-                    overflow:hidden;
-                    height:30px;
-                    .search-text{
-                        @include calculate-width(1);
-                    }                    
-                }
-                .fa{
-                    @include font(24px);
-                    vertical-align: middle;
-                }
+          }
         }
         ul{
             li{
@@ -6431,7 +6434,7 @@ section.sidebar{
             @include display-inline;
             position: relative;            
             background: #d1d1d1;
-            width: 190px;
+            width: 195px;
             height: 54px;
             line-height:54px;
             padding-right:10px;
