--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -1827,7 +1827,7 @@ footer{
     }
     .description{
       iframe{
-        min-height: 480px;
+        min-height: 495px;
       }
     }
     ul{
@@ -2089,7 +2089,7 @@ footer{
               padding-left: 18px;
             }
             a{
-              color: #1a3c8d;
+              color: #026bc5;
               &:hover{text-decoration: underline;}
             }
         }
