--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -4963,7 +4963,9 @@ div.node{
     }
   }
   .checked-list {
-    padding: 5px 10px;
+    margin: 5px 10px;
+    max-height: 210px;
+    overflow-y: auto;
     li {
       background-color: #f0f0f0;
       color: #2f2f2f;
