ITG-3520 #time 30m #comment Done.

--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -530,6 +530,7 @@ header {
   /*                        border-right: 1px solid $itg-nav-bordercolor;*/
   border-top: none;
   height: 37px;
+  white-space: nowrap;
   position: relative;
   font-size: 14px;
   font-size: 0.875rem;
