--- a/sites/all/themes/itg/css/media.css
+++ b/sites/all/themes/itg/css/media.css
@@ -447,6 +447,14 @@
   }
 
   /*search page css end */
+  #block-itg-live-tv-live-tv-video-page .program-livetv .live_tv_video {
+    max-width: 82%;
+    padding-bottom: 46.5%;
+  }
+  #block-itg-live-tv-live-tv-video-page .program-livetv .social-icon {
+    width: 18%;
+    padding-top: 10px;
+  }
 }
 @media only screen and (max-width: 991px) {
   /*CSS start education page special*/
@@ -577,6 +585,14 @@
   }
 
   /*budget page css end*/
+  #block-itg-live-tv-live-tv-video-page .program-livetv .live_tv_video {
+    max-width: 83%;
+    padding-bottom: 47%;
+  }
+  #block-itg-live-tv-live-tv-video-page .program-livetv .social-icon {
+    width: 17%;
+    padding-top: 40px;
+  }
 }
 @media only screen and (max-width: 768px) {
   .widget-wrapper {
@@ -1854,9 +1870,12 @@
   #block-itg-live-tv-live-tv-video-page .program-livetv {
     padding: 10px;
   }
-  #block-itg-live-tv-live-tv-video-page .program-livetv .social-icon, #block-itg-live-tv-live-tv-video-page .program-livetv .live_tv_video {
+  #block-itg-live-tv-live-tv-video-page .program-livetv .social-icon {
     width: 100%;
-    float: none;
+  }
+  #block-itg-live-tv-live-tv-video-page .program-livetv .live_tv_video {
+    max-width: none;
+    padding-bottom: 56.25%;
   }
   #block-itg-live-tv-live-tv-video-page .program-livetv .social-icon li {
     display: inline-block;
