--- a/sites/all/themes/itg/css/styles-new.css
+++ b/sites/all/themes/itg/css/styles-new.css
@@ -946,6 +946,36 @@ $debug: "width:645px"; // TODO: move to _settings.scss
   opacity: 1;
 }
 
+.node-ugc-form .form-field-name-field-ugc-photo-image fieldset {
+  border: none;
+}
+.node-ugc-form .form-field-name-field-ugc-photo-image fieldset legend {
+  float: left;
+  width: 200px;
+}
+.node-ugc-form .form-field-name-field-ugc-photo-image fieldset legend:after {
+  content: '*';
+  color: #f00;
+}
+.node-ugc-form .form-field-name-field-ugc-photo-image fieldset .fieldset-wrapper {
+  overflow: hidden;
+}
+.node-ugc-form .form-field-name-field-ugc-photo-image fieldset .fieldset-wrapper .tabledrag-toggle-weight-wrapper, .node-ugc-form .form-field-name-field-ugc-photo-image fieldset .fieldset-wrapper table thead {
+  display: none;
+}
+.node-ugc-form .form-field-name-field-ugc-photo-image fieldset .fieldset-wrapper table tbody tr td .tabledrag-handle {
+  display: none;
+}
+.node-ugc-form .form-field-name-field-ugc-photo-image fieldset .fieldset-wrapper table tbody tr td .form-submit {
+  border: none;
+  background: #fff;
+  color: #F00;
+  font-size: 12px;
+}
+.node-ugc-form .form-field-name-field-ugc-photo-image fieldset .fieldset-wrapper table + .form-type-managed-file {
+  margin-top: 10px;
+}
+
 .view-personalization-my-content .views-table {
   width: 100%;
   max-width: 860px;
