--- a/sites/all/themes/itg/sass/styles-new.scss
+++ b/sites/all/themes/itg/sass/styles-new.scss
@@ -952,6 +952,43 @@ $debug: "width:645px"; // TODO: move to _settings.scss
   }
 }
 
+.node-ugc-form{
+  .form-field-name-field-ugc-photo-image{
+    fieldset{
+      border: none;
+      legend{
+        float: left;
+        width: 200px;
+        &:after{
+          content:'*';
+          color: #f00;
+        }
+      }
+      .fieldset-wrapper{
+        overflow: hidden;
+        .tabledrag-toggle-weight-wrapper, table thead{display: none;}
+        table{
+          tbody{
+            tr{
+              td{
+                .tabledrag-handle{display: none;}
+                .form-submit{
+                  border: none;
+                  background: #fff;
+                  color: #F00;
+                  font-size: 12px;
+                }
+              }
+            }
+          }
+          & + .form-type-managed-file{margin-top: 10px;}
+        }
+        
+      }
+    }
+  }
+}
+
 .view-personalization-my-content{
   .views-table{
     width: 100%;
