--- a/sites/all/themes/itg/sass/styles-new.scss
+++ b/sites/all/themes/itg/sass/styles-new.scss
@@ -1867,7 +1867,7 @@ $debug: "width:645px"; // TODO: move to _settings.scss
   width: 100%;
   padding: 10px;
   text-align: center;
-  .add-more-block, .add-more-block-front, .removes-more-block{
+  .add-more-block, .add-more-block-front, .removes-more-block, .add-more-block-front-section{
     display: inline-block;
     vertical-align: top;
     padding: 10px 20px;
