--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -11209,7 +11209,7 @@ span.close_btt {
 
 
 
-
+.no-tv-program{padding-bottom: 20px;}
 .search-icon-parent{
   position: relative;
   .search-icon-search{
