--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -13585,6 +13585,10 @@ span.close_btt {
   width: 100%;
 }
 
+.no-tv-program {
+  padding-bottom: 20px;
+}
+
 .search-icon-parent {
   position: relative;
 }
