ITG-3241 #time 4h #comment done.

--- a/sites/all/themes/itg/css/media.css
+++ b/sites/all/themes/itg/css/media.css
@@ -2724,6 +2724,8 @@
   /*CSS start sidebar */
   section.sidebar {
     border: 1px solid #ddd;
+    width: 100%;
+    max-width: 370px;
   }
 
   .sidebars {
