--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -2826,6 +2826,8 @@
   /*CSS start sidebar */
   section.sidebar{
     border: 1px solid #ddd;
+    width: 100%;
+    max-width: 370px;
   }
   .sidebars{
     margin-top: 0px;
