ITG-3395 #time 1h #comment In case of no details found message aligned and color changed to red.

--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -13586,7 +13586,8 @@ span.close_btt {
 }
 
 .no-tv-program {
-  padding-bottom: 20px;
+  padding-bottom: 15px;
+  color: red;
 }
 
 .search-icon-parent {
