--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -11693,3 +11693,7 @@ span.file a{pointer-events: none; color: #2f2f2f;}
   .get-tokens > a {
     color: #0c8bb1;
   }
+  .ftp-center #itg_video_content .video-ftp{
+    border-right: none;
+    width: 100%;
+  }
