ITG-3056 #time 1h #comment done.

--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -458,12 +458,17 @@ header{
                 display:none;
                 margin-left:0;
                 margin-right:0;
+                right: 0 !important;
+                width: 172px;
                 li{                    
                     float: none;
                     border: none;
                     border-bottom: 1px solid #000;
                     a{
                         display: block;
+                        line-height: normal;
+                        padding: 7px 10px;
+                        white-space: normal;
                     }
                 }
             }
