--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -11697,3 +11697,18 @@ span.file a{pointer-events: none; color: #2f2f2f;}
     border-right: none;
     width: 100%;
   }
+  .view-tags-listing{
+    .attachment{
+      padding-right: 155px !important;
+    }
+    .view-content{
+      position: relative;
+      .button-default{
+        @extend .btn-submit;
+        position: absolute;
+        right: 0;
+        top: -46px;
+        margin-right: 0;
+      }
+    }
+  }
