--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -467,8 +467,10 @@ header{
                     a{
                         display: block;
                         line-height: normal;
+                        height: auto;
                         padding: 7px 10px;
                         white-space: normal;
+                        word-wrap: break-word;
                     }
                 }
             }
