--- a/sites/all/themes/itg/css/media.css
+++ b/sites/all/themes/itg/css/media.css
@@ -595,6 +595,10 @@
   }
 }
 @media only screen and (max-width: 768px) {
+  .block-itg-ads {
+    overflow: hidden;
+  }
+
   .widget-wrapper {
     overflow: initial;
   }
@@ -3075,6 +3079,10 @@
 }
 /*End CSS Desktop version*/
 @media only screen and (min-width: 768px) and (max-width: 1200px) {
+  .story-section .snap-post .agbutton, .story-section .snap-post .discription {
+    text-align: center;
+  }
+
   .widget-wrapper.top_stories_ordering .data-holder .block-itg-widget {
     overflow: scroll;
     max-height: 663px;
