--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -1624,6 +1624,11 @@
     width: 245px;
   }
   /*election page css end*/
+  
+  #block-itg-menu-manager-third-level-menu{
+    z-index: 999999;
+    position: relative;
+  }
 
 }
 
