--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -12438,3 +12438,16 @@ body.taxonomy-form-term-tags {
 .form-field-name-field-story-reporter .form-type-textfield .form-text + .autocomplete + div.description {
   left: 635px;
 }
+
+.group-survey-question .ajax-progress {
+  display: none !important;
+}
+
+div#edit-byline-names-wrapper {
+  width: 435px;
+}
+
+#views-exposed-form-report-filed-content-page #autocomplete {
+  max-height: 300px;
+  overflow-y: auto;
+}
