ITG-3028 #time 1h #comment issue resolved.

--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -8911,6 +8911,7 @@ section.sidebar{
 }
 .view-live-tv-programs{   
     @include sidebar-heading;  
+    @include pager;
     h3{
         display: block;
         margin-bottom: 20px;
@@ -11249,7 +11250,9 @@ span.close_btt {
 
 
 
-
+.front #block-itg-widget-we-may-suggest .may-be-suggest-container h3{
+  display: none;
+}
 .no-tv-program{padding-bottom: 15px; color: red;}
 .search-icon-parent{
   position: relative;
