--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -10772,6 +10772,46 @@ section.sidebar .block-itg-ads {
   margin-top: -2px;
   background: #ddd;
 }
+.view-live-tv-programs ul.pager {
+  margin: 10px 0;
+  list-style-type: none;
+  text-align: center;
+}
+.view-live-tv-programs ul.pager li {
+  display: inline-block;
+  vertical-align: top;
+}
+.view-live-tv-programs ul.pager li.pager-current {
+  height: 25px;
+  width: 25px;
+  line-height: 25px;
+  background-color: #337ab7;
+  color: #fff;
+  border-radius: 50%;
+  font-family: "Roboto", sans-serif;
+}
+.view-live-tv-programs ul.pager li.pager-item a {
+  display: block;
+  height: 25px;
+  width: 25px;
+  font-size: 16px;
+  font-size: 1rem;
+  line-height: 25px;
+  color: #323232;
+  font-family: "Roboto", sans-serif;
+}
+.view-live-tv-programs ul.pager li.pager-item a:hover {
+  background-color: #337ab7;
+  color: #fff;
+  border-radius: 50%;
+}
+.view-live-tv-programs ul.pager li.pager-next a, .view-live-tv-programs ul.pager li.pager-last a, .view-live-tv-programs ul.pager li.pager-first a, .view-live-tv-programs ul.pager li.pager-previous a {
+  color: #323232;
+  line-height: 25px;
+}
+.view-live-tv-programs ul.pager li.pager-next.pager-first.first, .view-live-tv-programs ul.pager li.pager-next.pager-last.last, .view-live-tv-programs ul.pager li.pager-last.pager-first.first, .view-live-tv-programs ul.pager li.pager-last.pager-last.last, .view-live-tv-programs ul.pager li.pager-first.pager-first.first, .view-live-tv-programs ul.pager li.pager-first.pager-last.last, .view-live-tv-programs ul.pager li.pager-previous.pager-first.first, .view-live-tv-programs ul.pager li.pager-previous.pager-last.last {
+  display: none;
+}
 .view-live-tv-programs h3 {
   display: block;
   margin-bottom: 20px;
@@ -13621,6 +13661,10 @@ span.close_btt {
   display: inline-block;
   vertical-align: top;
   width: 100%;
+}
+
+.front #block-itg-widget-we-may-suggest .may-be-suggest-container h3 {
+  display: none;
 }
 
 .no-tv-program {
