--- a/sites/all/themes/itgadmin/sass/styles.scss
+++ b/sites/all/themes/itgadmin/sass/styles.scss
@@ -11745,3 +11745,24 @@ span.file a{pointer-events: none; color: #2f2f2f;}
     width: 435px;
   } 
   #views-exposed-form-report-filed-content-page #autocomplete {max-height:300px; overflow-y:auto;}
+  .field-type-jquery-colorpicker{
+    .form-type-jquery-colorpicker{
+      padding: 0 10px 10px;
+      > label{
+        float: left;
+        width: 200px;
+        padding: 8px 0;
+      }
+      > .jquery_colorpicker{
+        position: relative;
+        overflow: hidden;
+        .jquery_colorpicker_field_clear_link{
+          @extend .btn-submit;
+          @extend .btn-small;
+          position: absolute;
+          left: 50px;
+          top: 4px;
+        }
+      }
+    }
+  }
