--- a/sites/all/themes/itgadmin/css/styles.css
+++ b/sites/all/themes/itgadmin/css/styles.css
@@ -12469,3 +12469,19 @@ div#edit-byline-names-wrapper {
   left: 50px;
   top: 4px;
 }
+
+.colorpicker input {
+  background-color: transparent;
+  border: 1px solid transparent !important;
+  position: absolute;
+  font-size: 10px !important;
+  height: auto !important;
+  line-height: 14px !important;
+  font-family: Arial, Helvetica, sans-serif !important;
+  color: #898989 !important;
+  top: 4px;
+  right: 11px;
+  text-align: right;
+  margin: 0;
+  padding: 0 !important;
+}
