resolve ui issues

--- a/sites/all/themes/itg/css/media.css
+++ b/sites/all/themes/itg/css/media.css
@@ -2385,6 +2385,10 @@
     font-size: 18px;
     line-height: 37px;
   }
+
+  .story-section .story-right.photo-story .multiple-photo {
+    padding: 0;
+  }
 }
 @media only screen and (max-width: 340px) {
   .story-section .story-right.photo-story .fa-chevron-left, .story-section .story-right.photo-story .fa-chevron-right {
