--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -2509,6 +2509,9 @@
     font-size: 18px;
     line-height: 37px;
   }
+  .story-section .story-right.photo-story .multiple-photo{
+    padding: 0;
+  }
 
 }
 @media only screen and (max-width:340px){
