--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -11256,9 +11256,13 @@ span.close_btt {
 
 
 
-.front #block-itg-widget-we-may-suggest .may-be-suggest-container h3{
-  display: none;
-}
+.front{
+  [id*="block-itg-widget-we-may-suggest"]{
+    .may-be-suggest-container h3{
+      display: none !important;
+    }
+  }
+} 
 .no-tv-program{padding-bottom: 15px; color: red;}
 .search-icon-parent{
   position: relative;
