resolve ui issues

--- a/sites/all/themes/itg/sass/media.scss
+++ b/sites/all/themes/itg/sass/media.scss
@@ -3188,7 +3188,7 @@
   .second-level-menu.before-load{
     height: 37px; overflow: hidden;
   }
-  body.section-common{
+  body.page-taxonomy-term{
     .row{
       overflow: hidden;
     }
