--- a/sites/all/themes/itg/css/styles.css
+++ b/sites/all/themes/itg/css/styles.css
@@ -5303,7 +5303,8 @@ h1.category-heading {
 #block-views-video-landing-header-block {
   color: #aaa8a9;
   background: #171717;
-  margin-top: 14px;
+  padding-top: 10px;
+  margin: 0;
 }
 #block-views-video-landing-header-block .ad-blocker:empty {
   display: none;
