--- a/sites/all/themes/itg/sass/styles.scss
+++ b/sites/all/themes/itg/sass/styles.scss
@@ -3995,7 +3995,8 @@ h1.category-heading{
 #block-views-video-landing-header-block{
     color:#aaa8a9;
     background: #171717; 
-    margin-top: 14px;
+    padding-top: 10px;
+    margin: 0;
     .ad-blocker:empty {
       display: none;
     }
